--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "snowpack dev",
+    "dev": "snowpack dev",
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.ts\""
   },
@@ -11,14 +11,22 @@
     "@snowpack/plugin-dotenv": "^2.0.4",
     "@snowpack/plugin-svelte": "^3.3.0",
     "@snowpack/plugin-typescript": "^1.1.0",
+    "@snowpack/plugin-webpack": "^2.1.1",
     "@snowpack/web-test-runner-plugin": "^0.1.4",
     "@testing-library/svelte": "^3.0.0",
     "@types/chai": "^4.2.13",
+    "@types/redux-logger": "^3.0.8",
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.9.7",
     "chai": "^4.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "rxjs": "^6.6.3",
+    "sass": "^1.29.0",
     "snowpack": "^2.17.1",
     "svelte-preprocess": "^4.0.8",
+    "svelte-spa-router": "^3.0.5",
+    "svelte3-redux": "^0.4.0",
     "typescript": "^4.0.0"
   }
 }
